--- a/chrome/content/about.css
+++ b/chrome/content/about.css
@@ -1,41 +1,94 @@
-/*
- * This Source Code Form is subject to the terms of the Mozilla Public
- * License, v. 2.0. If a copy of the MPL was not distributed with this
- * file, You can obtain one at https://mozilla.org/MPL/2.0/.
- */
+/* SPDX-License-Identifier: MPL-2.0 */
+/* SPDX-FileCopyrightText: 2024 awwpotato */
 
 /* themes for about:* pages */
 
-@-moz-document 
-url-prefix("about:newtab"),
+@-moz-document url-prefix("about:newtab"),
 url-prefix("about:privatebrowsing"),
 url-prefix("about:home") {
-    @media (-moz-bool-pref: "browser.tabs.allow_transparent_browser") 
-    and (-moz-bool-pref: "uc.tweak.translucency") {
-        body {
-            background-color: transparent !important;
-        }
-        .customize-menu .close-button-wrapper {
-            background-color: transparent !important;
-        }
+  @media (-moz-bool-pref: "browser.tabs.allow_transparent_browser") and (-moz-bool-pref: "uc.tweak.translucency") {
+    body {
+      background-color: color-mix(
+        in srgb,
+        transparent,
+        var(--newtab-background-color) 50%
+      ) !important;
     }
-    .customize-menu {
-        height: auto !important;
-        border-radius: var(--uc-content-radius) !important;
-        box-shadow: none !important;
+  }
+  .customize-menu {
+    height: fit-content !important;
+    border-radius: var(--uc-content-radius) !important;
+    box-shadow: none !important;
+    margin: var(--uc-content-margin) !important;
+    backdrop-filter: blur(var(--uc-blur-radius)) !important;
+    background-color: color-mix(
+      in srgb,
+      var(
+        --lwt-sidebar-background-color,
+        var(--newtab-background-color-secondary)
+      ),
+      transparent 20%
+    ) !important;
+
+    & .close-button-wrapper {
+      background-color: transparent !important;
     }
-    .personalize-button {
-        border-radius: var(--uc-radius) !important;
-        transition: opacity var(--uc-transition) !important;
-        &:not(:hover) { 
-            opacity: 0.2 !important;
-        }
+    & .wallpaper-list.category {
+      height: 100% !important;
+      width: 100% !important;
+      top: 0 !important;
+      left: 0 !important;
+      margin: auto !important;
+      border-radius: var(--uc-content-radius) !important;
+      backdrop-filter: blur(var(--uc-blur-radius)) !important;
+      background-color: color-mix(
+        in srgb,
+        var(
+          --lwt-sidebar-background-color,
+          var(--newtab-background-color-secondary)
+        ),
+        transparent 30%
+      ) !important;
     }
+    /*  back button on wallpaper page */
+    & .wallpaper-list.category button.arrow-button {
+      margin: 16px !important;
+    }
+  }
+  .top-sites .tile,
+  .search-wrapper .search-handoff-button,
+  .search-wrapper input,
+  .card-outer,
+  .compact-cards .card-outer .card-context,
+  .weatherButtonContextMenuWrapper,
+  .weatherInfoLink,
+  .context-menu,
+  .weatherButtonContextMenuWrapper::after,
+  .personalize-button:hover {
+    backdrop-filter: blur(var(--uc-blur-radius)) !important;
+    background-color: color-mix(
+      in srgb,
+      var(
+        --lwt-sidebar-background-color,
+        var(--newtab-background-color-secondary)
+      ),
+      transparent 20%
+    ) !important;
+  }
+  & .compact-cards .card-outer .card-context {
+    clip-path: none !important;
+  }
+  .personalize-button {
+    border-radius: var(--uc-radius) !important;
+    transition: opacity var(--uc-transition) !important;
+    &:not(:hover) {
+      opacity: 0.2 !important;
+    }
+  }
 }
 
 /* common theming */
-@-moz-document 
-url-prefix("about:preferences"),
+@-moz-document url-prefix("about:preferences"),
 url-prefix("about:support"),
 url-prefix("about:config"),
 url-prefix("about:newtab"),
@@ -44,54 +97,62 @@ url-prefix("about:home"),
 url-prefix("about:support"),
 url-prefix("about:profiles"),
 url-prefix("about:addons") {
-    @media (-moz-bool-pref: "browser.tabs.allow_transparent_browser")
-    and (-moz-bool-pref: "uc.tweak.translucency")  {
-        :root {
-            --in-content-page-background: transparent !important;
-            --in-content-table-background: transparent !important;
-            /* --in-content-table-header-background: 
-                color-mix(in srgb, var(--in-content-primary-button-background), transparent 80%) !important;  */
-            --in-content-box-background: 
-                color-mix(in srgb, var(--background-color-box), transparent 80%) !important; 
-        }
-        .card {
-            box-shadow: none !important;
-        }
+  @media (-moz-bool-pref: "browser.tabs.allow_transparent_browser") and (-moz-bool-pref: "uc.tweak.translucency") {
+    :root {
+      --in-content-page-background: transparent !important;
+      --in-content-table-background: transparent !important;
+      /* --in-content-table-header-background: 
+color-mix(in srgb, var(--in-content-primary-button-background), transparent 80%) !important;  */
+      --in-content-box-background: color-mix(
+        in srgb,
+        var(--background-color-box),
+        transparent 80%
+      ) !important;
     }
+    .card {
+      box-shadow: none !important;
+    }
+  }
 }
 
 @-moz-document url-prefix("about:config") {
-    @media (-moz-bool-pref: "browser.tabs.allow_transparent_browser")
-    and (-moz-bool-pref: "uc.tweak.translucency")  {
-        #about-config-search {
-            backdrop-filter: blur(33px) !important;
-            background-color: color-mix(in srgb, var(--background-color-box), transparent 20%) !important;
-        }
+  @media (-moz-bool-pref: "browser.tabs.allow_transparent_browser") and (-moz-bool-pref: "uc.tweak.translucency") {
+    #about-config-search {
+      backdrop-filter: blur(33px) !important;
+      background-color: color-mix(
+        in srgb,
+        var(--background-color-box),
+        transparent 20%
+      ) !important;
     }
+  }
 }
 
 @-moz-document url-prefix("about:addons") {
-    @media (-moz-bool-pref: "browser.tabs.allow_transparent_browser")
-    and (-moz-bool-pref: "uc.tweak.translucency")  {
-        :root {
-            --in-content-box-background: 
-                color-mix(in srgb, var(--background-color-box), transparent 60%) !important; 
-        }
-        .main-heading {
-            display: none !important;
-        }
+  @media (-moz-bool-pref: "browser.tabs.allow_transparent_browser") and (-moz-bool-pref: "uc.tweak.translucency") {
+    :root {
+      --in-content-box-background: color-mix(
+        in srgb,
+        var(--background-color-box),
+        transparent 60%
+      ) !important;
     }
+    .main-heading {
+      display: none !important;
+    }
+  }
 }
 
-@-moz-document 
-url-prefix("about:preferences"),
+@-moz-document url-prefix("about:preferences"),
 url-prefix("about:support") {
-    @media (-moz-bool-pref: "browser.tabs.allow_transparent_browser")
-    and (-moz-bool-pref: "uc.tweak.translucency")  {
-        #searchInput {
-            backdrop-filter: blur(33px) !important;
-            background-color: color-mix(in srgb, var(--background-color-box), transparent 10%) !important; 
-        }
+  @media (-moz-bool-pref: "browser.tabs.allow_transparent_browser") and (-moz-bool-pref: "uc.tweak.translucency") {
+    #searchInput {
+      backdrop-filter: blur(33px) !important;
+      background-color: color-mix(
+        in srgb,
+        var(--background-color-box),
+        transparent 10%
+      ) !important;
     }
+  }
 }
-    
