--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -1,35 +1,42 @@
-/*
- * This Source Code Form is subject to the terms of the Mozilla Public
- * License, v. 2.0. If a copy of the MPL was not distributed with this
- * file, You can obtain one at https://mozilla.org/MPL/2.0/.
- */
+/* SPDX-License-Identifier: MPL-2.0 */
+/* SPDX-FileCopyrightText: 2024 awwpotato */
 
-@import url("browser/main.css");
-@import url("vars.css");
+@import url("browser/potato-main.css");
+@import url("potato-vars.css");
 
 :root {
-    @media not (-moz-bool-pref: "uc.tweak.no-panel-hint") {
-        --uc-panel-hint: color-mix( in srgb, var(--toolbarbutton-icon-fill), transparent 75%);
-    }
+  @media not (-moz-bool-pref: "uc.tweak.no-panel-hint") {
+    --uc-panel-hint: color-mix(
+      in srgb,
+      var(--toolbarbutton-icon-fill),
+      transparent 75%
+    );
+  }
 
-    --uc-bg: var(--uc-bg-opaque);
-    
-    --uc-bg-opaque: light-dark(rgb(239, 239, 242), rgb(27, 26, 32));
-    @media (-moz-platform: linux) {
-        --uc-bg-opaque: ActiveCaption;
-    }
-    
-    @media (-moz-bool-pref: "uc.tweak.translucency") {
-        --uc-bg: light-dark(
-            color-mix(in srgb, rgb(239, 239, 242), transparent 10%), 
-            color-mix(in srgb, rgb(27, 26, 32), transparent 10%) 
-        );
-    }
+  --uc-bg-opaque: light-dark(rgb(239, 239, 242), rgb(27, 26, 32));
+  @media (-moz-platform: linux) {
+    --uc-bg-opaque: ActiveCaption;
+  }
 
-    &[lwtheme="true"] {
-        --uc-bg-opaque: var(--lwt-accent-color);
-        @media (-moz-bool-pref: "uc.tweak.translucency") {
-            --uc-bg: color-mix(in srgb, var(--lwt-accent-color), transparent 10%);
-        }
+  --uc-content-bg: transparent;
+  &[lwtheme="true"] {
+    --uc-bg-opaque: var(--lwt-accent-color);
+    @media not (-moz-bool-pref: "uc.tweak.translucency") {
+      --uc-content-bg: var(--newtab-background-color);
     }
+  }
+
+  --uc-bg: var(--uc-bg-opaque);
+  --uc-bg-tran: var(--uc-bg-opaque);
+  --uc-bg-translucency: color-mix(
+    in srgb,
+    var(--uc-bg-opaque),
+    transparent 10%
+  );
+  @media not (-moz-bool-pref: "uc.tweak.no-blur") {
+    --uc-bg-tran: var(--uc-bg-translucency);
+  }
+  @media (-moz-bool-pref: "uc.tweak.translucency") {
+    --uc-bg: var(--uc-bg-translucency);
+  }
 }
