--- a/chrome/userContent.css
+++ b/chrome/userContent.css
@@ -1,23 +1,20 @@
-/*
- * This Source Code Form is subject to the terms of the Mozilla Public
- * License, v. 2.0. If a copy of the MPL was not distributed with this
- * file, You can obtain one at https://mozilla.org/MPL/2.0/.
- */
+/* SPDX-License-Identifier: MPL-2.0 */
+/* SPDX-FileCopyrightText: 2024 awwpotato */
 
-@import url("vars.css");
+@import url("potato-vars.css");
 @import url("content/sidebery.css");
 @import url("content/about.css");
 
 /* pdf viewer */
 [mozdisallowselectionprint] > body {
-    & #mainContainer {
-        & .toolbar {
-            padding: 4px !important;
-            padding-bottom: none !important;
-            & #toolbarContainer {
-                border-radius: var(--uc-radius) !important;
-                box-shadow: none !important;
-            }
-        }
+  & #mainContainer {
+    & .toolbar {
+      padding: 4px !important;
+      padding-bottom: none !important;
+      & #toolbarContainer {
+        border-radius: var(--uc-radius) !important;
+        box-shadow: none !important;
+      }
     }
+  }
 }
