--- a/chrome/browser/potato-sidebar.css
+++ b/chrome/browser/potato-sidebar.css
@@ -2,7 +2,7 @@
 /* SPDX-FileCopyrightText: 2024 awwpotato */
 
 /* make sidebar bg transparent */
-@media (-moz-bool-pref: "browser.tabs.allow_transparent_browser") {
+@media -moz-pref( "browser.tabs.allow_transparent_browser") {
   window#webextpanels-window {
     background-color: transparent !important;
   }
@@ -20,7 +20,7 @@
   #sidebar-box {
     min-width: var(--uc-sidebar-width) !important;
     margin-bottom: var(--uc-content-margin-bottom) !important;
-    @media (-moz-bool-pref: "uc.tweak.borderless") {
+    @media -moz-pref( "uc.tweak.borderless") {
       margin-bottom: var(--uc-sidebar-margin) !important;
     }
     margin-top: var(--uc-content-margin-top) !important;
@@ -44,7 +44,7 @@
     }
   }
 
-  @media (-moz-bool-pref: "uc.tweak.borderless") {
+  @media -moz-pref( "uc.tweak.borderless") {
     /* navbar hidden */
     &[titlepreface*="​"] #sidebar-box {
       margin-top: var(--uc-sidebar-margin) !important;
@@ -54,7 +54,7 @@
   #sidebar {
     clip-path: circle(100%);
     border-radius: var(--uc-content-radius) !important;
-    @media (-moz-bool-pref: "uc.tweak.sidebar.header") {
+    @media -moz-pref( "uc.tweak.sidebar.header") {
       border-top-left-radius: 0px !important;
       border-top-right-radius: 0px !important;
     }
@@ -67,7 +67,7 @@
   }
 
   #sidebar-header {
-    @media not (-moz-bool-pref: "uc.tweak.sidebar.header") {
+    @media not -moz-pref( "uc.tweak.sidebar.header") {
       display: none !important;
     }
     border-top-left-radius: var(--uc-radius) !important;
@@ -169,7 +169,7 @@
     #sidebar-box:hover > #sidebar-header,
     #sidebar-box:hover > #sidebar {
       background-color: var(--uc-bg-tran) !important;
-      @media not (-moz-bool-pref: "uc.tweak.no-blur") {
+      @media not -moz-pref( "uc.tweak.no-blur") {
         backdrop-filter: blur(var(--uc-blur-radius)) !important;
       }
     }
@@ -188,7 +188,7 @@
             margin-left var(--uc-transition) var(--uc-mouseout-delay),
             margin-right var(--uc-transition) var(--uc-mouseout-delay) !important;
           background-color: var(--uc-bg-tran) !important;
-          @media not (-moz-bool-pref: "uc.tweak.no-blur") {
+          @media not -moz-pref( "uc.tweak.no-blur") {
             backdrop-filter: blur(var(--uc-blur-radius)) !important;
           }
 
@@ -213,7 +213,7 @@
         & #sidebar {
           border-radius: 10px !important;
           margin-block: var(--uc-floating-margin) !important;
-          @media (-moz-bool-pref: "uc.tweak.sidebar.header") {
+          @media -moz-pref( "uc.tweak.sidebar.header") {
             margin-top: 0 !important;
           }
           opacity: 0.95 !important;
@@ -265,7 +265,7 @@
         }
       }
 
-      @media not (-moz-bool-pref: "uc.tweak.borderless") {
+      @media not -moz-pref( "uc.tweak.borderless") {
         &:not([sizemode="fullscreen"])
           #sidebar-box:not([positionend="true"])::before {
           left: calc(
@@ -320,7 +320,7 @@
         }
       }
 
-      @media (-moz-bool-pref: "uc.tweak.borderless") {
+      @media -moz-pref( "uc.tweak.borderless") {
         #sidebar-box {
           background-color: transparent !important;
           &[positionend="true"] {
