--- a/chrome/browser/potato-main.css
+++ b/chrome/browser/potato-main.css
@@ -42,7 +42,7 @@ splitter.devtools-horizontal-splitter,
       [chromehidden*="toolbar"],
       [chromehidden*="menubar"]
     ) {
-    @media not (-moz-bool-pref: "uc.tweak.borderless") {
+    @media not -moz-pref( "uc.tweak.borderless") {
       --uc-content-margin-top: var(--uc-content-margin);
       --uc-content-margin-right: var(--uc-content-margin);
       --uc-content-margin-bottom: var(--uc-content-margin);
@@ -59,8 +59,8 @@ splitter.devtools-horizontal-splitter,
         }
       }
     }
-    @media (-moz-bool-pref: "uc.tweak.borderless") and 
-    (not (-moz-bool-pref: "uc.tweak.borderless.no-round")) {
+    @media -moz-pref( "uc.tweak.borderless") and 
+    (not -moz-pref( "uc.tweak.borderless.no-round")) {
       & #appcontent browser {
         clip-path: circle(100%);
         background-color: var(--uc-content-bg) !important;
@@ -95,7 +95,7 @@ splitter.devtools-horizontal-splitter,
     & #appcontent browser {
       background-color: var(--uc-content-bg) !important;
     }
-  @media not (-moz-bool-pref: "uc.tweak.borderless.no-round") {
+  @media not -moz-pref( "uc.tweak.borderless.no-round") {
     & #appcontent browser { clip-path: circle(100%); }
     /* not navbar hidden */
     &:not([titlepreface*="​"]) {
@@ -117,7 +117,7 @@ splitter.devtools-horizontal-splitter,
     }
   }}
 
-  @media (-moz-bool-pref: "uc.tweak.translucency") and (-moz-platform: macos) {
+  @media -moz-pref( "uc.tweak.translucency") and (-moz-platform: macos) {
     -moz-appearance: -moz-window-titlebar !important;
   }
 }
