--- a/chrome/browser/potato-navbar.css
+++ b/chrome/browser/potato-navbar.css
@@ -92,7 +92,7 @@ Values of these variables can be changed safely and most likely nothing will bre
 /* accent color toggle */
 :root{--shy-color: var(--shy-accent-color)}
 
-@media (-moz-bool-pref: "shyfox.fill.accent.with.icons.fill.color"){
+@media -moz-pref( "shyfox.fill.accent.with.icons.fill.color"){
   :root{--shy-color: var(--toolbar-color, var(--shy-accent-color)) !important;}
 }
 
@@ -356,12 +356,12 @@ toolbarspring {
   
   
   &:not([sizemode="fullscreen"]) {
-    @media not (-moz-bool-pref: "uc.tweak.borderless") {
+    @media not -moz-pref( "uc.tweak.borderless") {
       --uc-content-margin-top: var(--uc-content-margin) !important;
     }
   }
   --uc-content-margin-inline: calc(var(--uc-content-margin) * 2);
-  @media (-moz-bool-pref: "uc.tweak.borderless") {
+  @media -moz-pref( "uc.tweak.borderless") {
     --uc-content-margin-inline: 0px;
   }
   --nav-width: clamp(
@@ -401,7 +401,7 @@ toolbarspring {
     background-color: transparent !important;
   }
 /* loading indicator */
-  @media not (-moz-bool-pref: "uc.tweak.borderless") {
+  @media not -moz-pref( "uc.tweak.borderless") {
     &:not([customizing]):not([sizemode="fullscreen"]) #navigator-toolbox {
       &::before {
         content: "";
@@ -486,7 +486,7 @@ toolbarspring {
       overflow: unset !important;
     }
 
-    @media not (-moz-bool-pref: "uc.tweak.no-blur") {
+    @media not -moz-pref( "uc.tweak.no-blur") {
       #nav-bar::before,
       #PersonalToolbar::before {
         content: "";
