--- a/chrome/content/sidebery.css
+++ b/chrome/content/sidebery.css
@@ -14,7 +14,7 @@
     --nav-btn-width: 30px !important;
     --nav-btn-height: 28px !important;
 
-    @media (-moz-bool-pref: "browser.tabs.allow_transparent_browser") {
+    @media -moz-pref( "browser.tabs.allow_transparent_browser") {
       background-color: transparent !important;
       --frame-bg: transparent !important;
     }
@@ -72,7 +72,7 @@
     padding: var(--tabs-margin) !important;
   }
 
-  @media not (-moz-bool-pref: "uc.tweak.sidebery.top-navbar") {
+  @media not -moz-pref( "uc.tweak.sidebery.top-navbar") {
     .top-horizontal-box {
       order: 100 !important;
       margin-bottom: 0px !important;
@@ -90,7 +90,7 @@
     }
   }
 
-  @media (-moz-bool-pref: "uc.tweak.sidebery.big-pinned") {
+  @media -moz-pref( "uc.tweak.sidebery.big-pinned") {
     .PinnedTabsBar {
       display: grid !important;
       grid-template-rows: 3rem;
