--- a/chrome/potato-vars.css
+++ b/chrome/potato-vars.css
@@ -4,7 +4,7 @@
 @import url("overrides.css");
 
 :root {
-  @media not (-moz-bool-pref: "uc.tweak.no-animations") {
+  @media not -moz-pref( "uc.tweak.no-animations") {
     --uc-transition: 200ms ease-in-out;
     --uc-mouseout-delay: 250ms;
   }
@@ -28,16 +28,16 @@
   --uc-small-floating-margin: 4px;
   --uc-floating-margin: 8px;
 
-  @media (-moz-bool-pref: "browser.tabs.allow_transparent_browser") and (not (-moz-bool-pref: "uc.tweak.translucency")) {
+  @media -moz-pref( "browser.tabs.allow_transparent_browser") and (not -moz-pref( "uc.tweak.translucency")) {
     --uc-content-shadow: 0px 0px 8px 1px rgba(0, 0, 0, 0.2);
   }
 
   /* sidebar vars */
   --uc-sidebar-hover-width: 170px;
-  @media (-moz-bool-pref: "uc.tweak.sidebar.short") {
+  @media -moz-pref( "uc.tweak.sidebar.short") {
     --uc-sidebar-hover-width: 140px;
   }
-  @media (-moz-bool-pref: "uc.tweak.sidebar.wide") {
+  @media -moz-pref( "uc.tweak.sidebar.wide") {
     --uc-sidebar-hover-width: 200px;
   }
 
