--- a/chrome/userChrome.css
+++ b/chrome/userChrome.css
@@ -5,7 +5,7 @@
 @import url("potato-vars.css");
 
 :root {
-  @media not (-moz-bool-pref: "uc.tweak.no-panel-hint") {
+  @media not -moz-pref( "uc.tweak.no-panel-hint") {
     --uc-panel-hint: color-mix(
       in oklab,
       var(--toolbarbutton-icon-fill) 25%,
@@ -21,7 +21,7 @@
   --uc-content-bg: transparent;
   &[lwtheme="true"] {
     --uc-bg-opaque: var(--lwt-accent-color);
-    @media not (-moz-bool-pref: "uc.tweak.translucency") {
+    @media not -moz-pref( "uc.tweak.translucency") {
       --uc-content-bg: var(--newtab-background-color);
     }
   }
@@ -33,10 +33,10 @@
     var(--uc-bg-opaque) 90%,
     transparent
   );
-  @media not (-moz-bool-pref: "uc.tweak.no-blur") {
+  @media not -moz-pref( "uc.tweak.no-blur") {
     --uc-bg-tran: var(--uc-bg-translucency);
   }
-  @media (-moz-bool-pref: "uc.tweak.translucency") {
+  @media -moz-pref( "uc.tweak.translucency") {
     --uc-bg: var(--uc-bg-translucency);
   }
 }
