--- a/chrome/browser/potato-urlbar.css
+++ b/chrome/browser/potato-urlbar.css
@@ -48,14 +48,14 @@
   margin: auto !important;
 }
 
-#urlbar-background {
+.urlbar-background {
   border-radius: var(--uc-button-radius) !important;
   border: none !important;
   box-shadow: none !important;
   background: transparent !important;
 }
 
-#urlbar[breakout-extend] #urlbar-background {
+#urlbar[breakout-extend] .urlbar-background {
   background-color: Field !important;
   @media not -moz-pref( "uc.tweak.no-blur") {
     backdrop-filter: blur(var(--uc-blur-radius)) !important;
